--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compile "joda-time:joda-time:2.2"
     testCompile "junit:junit:4.12"
 
+    compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
+
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 
